qlcplus (4.14.1) stable; urgency=low

  * New fixture: beamZ MHL75 Hybrid Moving Head (thanks to Mikko Wuokko)
  * New fixtures: Eurolite LED TSL-1000 Scan MK2, Varytec LED Theater Spot 100 (thanks to Christoph Wieser)

  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Mar 2025 18:19:20 +0200

qlcplus (4.14.0) stable; urgency=low

  * engine: fix flashing fade out
  * engine: add stopOnExit, waitFunctionStart and waitFunctionStop commands to Script - see documentation (thanks to ldebs)
  * engine: introduce RGBScript v3 and allow up to 5 colors (thanks to Hans-Jürgen Tappe)
  * engine/RGBMatrix: rewind animated GIFs on startup
  * UI: adjust audio volume on video intensity change
  * UI/Fixture Manager: limit the number of RGB panel columns for RGBW to avoid crash
  * UI/Function Wizard: improved with more VC widget creation (thanks to 8-Lambda-8)
  * UI/Fixture Group Editor: allow to add fixtures top to bottom and left to right (thanks to Yestalgia)
  * UI/Show Manager: show step notes on the timeline (thanks to anarchid)
  * UI/Show Manager: handle CTRL+mouse wheel to zoom in/out
  * Virtual Console/Slider: send feedback on override button press
  * Virtual Console/Sped Dial: fix foreground color setting on Windows
  * Virtual Console/Frame: fix widget page initialization on Operate mode
  * Virtual Console/XY Pad: added Pan/Tilt fine external controls
  * Plugins/OS2L: fix receiving multiple messages at once
  * Web Access: reworked websocket implementation
  * Web Access: fix grand master stopping running functions
  * Web Access: fix simple desk not resetting the current universe
  * Web Access: improve value synchornization with simple desk
  * Web Access: add widget ID to getWidgetType and getWidgetStatus response
  * Web Access: show multipage frame names (thanks to jpue)
  * RGB scripts: added 'Sine Wave' script
  * RGB scripts: fix Vertical Fall not allowing changing color when cloned